# gizmosql

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SETUP.md  Docker-README.md  Dockerfile  Dockerfile-adbc.ci  Dockerfile-slim.ci  Dockerfile.ci  LICENSE  NOTICE  PROJECT_ANALYSIS.md  README.md  docker-compose.test.yml  mkdocs.yml  requirements.txt  statement-queuing-design.md
.github/: FUNDING.yml
.github/workflows/: build-docker-images.yml  ci.yml  deploy-docs.yml  ios.yml  scout-test.yml  slack-on-star.yml  test-msi.yml  test.yml
client_demos/python/: README_PYTHON.md  main.py  pyproject.toml
docs/: CNAME  README.md  VIEW_DOCS_LOCALLY.md  _navbar.md  _sidebar.md  adbc_scanner_duckdb.md  admin_command_gating.md  api-reference.md  bulk_ingestion.md  catalog_logging.md  client.md  clients.md  configuration.md  contributing.md  documentation.md  ducklake.md  editions.md  faq.md  geometry.md  graceful_shutdown.md  index.html  index.md  installation.md  integrations.md  llms.txt  lts_channel.md  manual_pivot_testing.md  oauth_sso_setup.md  one_trillion_row_challenge.md  opentelemetry.md  performance.md  python_adbc.md  python_library.md  quickstart.md  robots.txt  security.md  session_instrumentation.md  set_commands.md  statement-queuing-design.md  statement_queuing.md  (+2 more)
docs/js/: hash-redirect.js
helm-chart/: Chart.yaml  install_helm_chart.sh  values.yaml
helm-chart/secrets/opaque/: README.md
helm-chart/templates/: NOTES.txt  _helpers.tpl  global-secret.yaml  server-service.yaml  server-statefulset.yaml  tls-secret.yaml
installer/: GizmoSQL.wxs
ios/GizmoSQL/: project.yml
ios/GizmoSQL/GizmoSQL.xcodeproj/: project.pbxproj
ios/cmake/: ios-toolchain.cmake
ios/scripts/: build-ios-libs.sh  retag_objects_to_ios.py
license_generation_files/: generate_key.sh  public_key.pem
scripts/: build_portable_linux.sh  docker-compose.telemetry-test.yaml  start_gizmosql.sh  start_gizmosql_debug.sh  start_gizmosql_slim.sh  test_gizmosql.py  test_gizmosql.sh  test_pivot_issue.py  test_telemetry.sh  update_docs_version.sh  upload_artifact_to_gizmosql_public.sh
src/: gizmosql_client.cpp  gizmosql_server.cpp
src/client/: client_config.cpp  client_config.hpp  command_processor.cpp  command_processor.hpp  flight_connection.cpp  flight_connection.hpp  main.cpp  oauth_flow.cpp  oauth_flow.hpp  output_renderer.cpp  output_renderer.hpp  pager.cpp  pager.hpp  password_prompt.cpp  password_prompt.hpp  shell_completer.cpp  shell_completer.hpp  shell_loop.cpp  shell_loop.hpp  sql_processor.cpp  sql_processor.hpp  syntax_highlighter.cpp  syntax_highlighter.hpp
src/common/: access_log_middleware.cpp  gizmosql_library.cpp  gizmosql_logging.cpp  gizmosql_security.cpp  gizmosql_session_middleware.cpp  gizmosql_telemetry.cpp  health_service.cpp  session_context.cpp  system_catalog.cpp  telemetry_middleware.cpp  version.rc.in
src/common/include/: access_log_middleware.h  gizmosql_library.h  gizmosql_logging.h  gizmosql_security.h  request_ctx.h  system_catalog.h
src/duckdb/: admin_command_guard.cpp  admin_command_guard.h  duckdb_server.cpp  duckdb_server.h  duckdb_sql_info.cpp  duckdb_sql_info.h  duckdb_statement.cpp  duckdb_statement.h  duckdb_statement_batch_reader.cpp  duckdb_statement_batch_reader.h  duckdb_tables_schema_batch_reader.cpp  duckdb_tables_schema_batch_reader.h  duckdb_type_info.cpp  duckdb_type_info.h
src/duckdb/instrumentation/: instrumentation_manager.cpp  instrumentation_manager.h  instrumentation_records.cpp  instrumentation_records.h
src/enterprise/: CMakeLists.txt  LICENSE  catalog_backend.h  enterprise_features.cpp  enterprise_features.h
src/enterprise/catalog_logging/: catalog_log_sink.cpp  catalog_log_sink.h
src/enterprise/catalog_permissions/: catalog_permissions_handler.cpp  catalog_permissions_handler.h
src/enterprise/instrumentation/: instrumentation_manager.cpp  instrumentation_manager.h  instrumentation_records.cpp  instrumentation_records.h
src/enterprise/jwks/: jwks_manager.cpp  jwks_manager.h
src/enterprise/kill_session/: kill_session_handler.cpp  kill_session_handler.h
src/enterprise/license_mgr/: license_manager.cpp  license_manager.h  license_public_key.h
src/enterprise/oauth/: oauth_html_templates.h  oauth_http_server.cpp  oauth_http_server.h
src/sqlite/: sqlite_server.cc  sqlite_server.h  sqlite_sql_info.cc  sqlite_sql_info.h  sqlite_statement.cc  sqlite_statement.h  sqlite_statement_batch_reader.cc  sqlite_statement_batch_reader.h  sqlite_tables_schema_batch_reader.cc  sqlite_tables_schema_batch_reader.h  sqlite_type_info.cc  sqlite_type_info.h
tests/: CMakeLists.txt  setup_test_data.py  test_autocommit_false.py  test_bulk_ingest.py  test_catalog_header.py  test_client_shell.sh  test_geoarrow.py  test_pivot_multi_statement.py  test_prepared_statements.py  test_v1_22_1_features.py  test_v1_22_features.py
tests/integration/: test_active_session_count.cpp  test_admin_command_guard.cpp  test_admission_controller.cpp  test_allow_unsigned_extensions.cpp  test_auth_log_level.cpp  test_authentication.cpp  test_bulk_ingest.cpp  test_catalog_access.cpp  test_catalog_logging.cpp  test_catalog_permissions_enterprise.cpp  test_catalog_wildcards.cpp  test_client_cli.cpp  test_client_config.cpp  test_cross_instance_tokens.cpp  test_ducklake.cpp  test_enterprise_gating.cpp  test_geoarrow.cpp  test_graceful_shutdown.cpp  test_graceful_shutdown_settings.cpp  test_health_check.cpp  test_inline_license_key.cpp  test_instance_session_query_tags.cpp  test_instrumentation.cpp  test_instrumentation_ducklake.cpp  test_interactive_client.cpp  test_internal_query_log_level.cpp  test_kill_session.cpp  test_log_level_filtering.cpp  test_max_metadata_size.cpp  test_oauth_server.cpp  test_query_profile_capture.cpp  test_read_only_mode.cpp  test_server_cli.cpp  test_server_fixture.h  test_session_options_probe.cpp  test_set_query_log_level.cpp  test_sqlite_backend.cpp  test_statement_queue.cpp  test_storage_version.cpp  test_system_ca_certs.cpp  (+4 more)
tls/: .gitignore  gen-certs.sh
(+38 files in other folders)
